bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:1: error: value asb is not a member of object Math
def nearHundred(n:Int): Boolean = {return(Math.asb(100-Math.abs(n))<11 )}
                                               ^